--- a/war/version.html
+++ b/war/version.html
@@ -8,13 +8,12 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>WebPaige Versions</title>
+    <title>StandBy Versions</title>
     
     <meta name="description" content="WebPaige">
     <meta name="viewport" content="width=device-width">
 
     <!-- jquery -->
-    <!-- <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script> -->
     <script src="js/libs/jquery/1.9.1/jquery-1.9.1.min.js"></script>
     
     <!-- favicons -->
@@ -47,7 +46,7 @@
             </div>
             <hr>
             <div class="jumbotron">
-              <h1>WebPaige Versions</h1>
+              <h1>StandBy Versions</h1>
               <br>
               <a class="btn btn-large btn-success" onclick="window.close()">Close this window</a>
             </div>
