--- a/war/index.html
+++ b/war/index.html
@@ -43,8 +43,6 @@
     <!--[if lt IE 9]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
     <!--[if gt IE 7]> <script src="libs/angular-ui/0.4.0/angular-ui-ieshiv.min.js"></script>     <![endif]-->
 
-    <!--<script src="libs/modernizr/2.6.2/modernizr-2.6.2.min.js"></script>-->
-
   </head>
   <body>
 
@@ -323,7 +321,7 @@
               <li>
                 <span class="muted">
                   <small>
-                    Ask Community Systems, 2013<br><i>StandBy <a href="version.html" target="_blank" style="color: #dddddd;">v{{config.version}}</a></i>
+                    Ask Community Systems, 2013<br><i><a href="version.html" target="_blank" style="color: #dddddd;">StandBy v{{config.version}}</a></i>
                   </small>
                 </span>
               </li>
