pre-release for next version

--- a/war/version.html
+++ b/war/version.html
@@ -41,7 +41,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.8</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.9</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -58,10 +58,84 @@
 
                   <li>
                     <p>
-                      <h4>2.3.8</h4>
+                    <h4>2.3.9</h4>
                     </p>
                     <hr/>
                     <ul>
+                      <li>
+                        <span class="label label-info">release</span>
+                        Planned version release.
+                        <i class="text-info">9-12-2013</i>
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        For not selectable newly created groups in group selector widget in dashboard.
+                        <i class="text-info">6-12-2013</i>
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Re-designed password reset emails.
+                        <i class="text-info">5-12-2013</i>
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Friendly error messages for background sync mechanism of agenda data.
+                        <i class="text-info">5-12-2013</i>
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Changing amount of required members in group view.
+                        <i class="text-info">5-12-2013</i>
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Fast availability button web app.
+                        <i class="text-info">5-12-2013</i>
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Removed ‘WebPaige’ terms from web app.
+                        <i class="text-info">5-12-2013</i>
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        TV monitor views for smartAlarming.
+                        <i class="text-info">3-12-2013</i>
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Enhancing the smartAlarming widget in dashboard with real availabilities.
+                        <i class="text-info">3-12-2013</i>
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Rounding end time based on the start time (#54).
+                        <i class="text-info">25-11-2013</i>
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Cache mechanism for smartAlarming team members list.
+                        <i class="text-info">11-11-2013</i>
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Hooking new P2000 api with new StandBy installations.
+                        <i class="text-info">11-11-2013</i>
+                      </li>
+                    </ul>
+                  </li>
+
+                  <li>
+                    <p>
+                    <h4>2.3.8</h4>
+                    </p>
+                    <hr/>
+                    <ul>
+                      <li>
+                        <span class="label label-info">release</span>
+                        Version released.
+                        <i class="text-info">20-11-2013</i>
+                      </li>
                       <li>
                         <span class="label label-success">feature</span>
                         Easy planning for later years
@@ -81,6 +155,11 @@
                     </p>
                     <hr/>
                     <ul>
+                      <li>
+                        <span class="label label-info">release</span>
+                        Version released.
+                        <i class="text-info">28-10-2013</i>
+                      </li>
                       <li>
                         <span class="label label-important">fix</span>
                         Fix for not correctly switching timeline navigational scope buttons (day-week-month).
