post-release & some changes

--- a/war/version.html
+++ b/war/version.html
@@ -68,7 +68,7 @@
                         <i class="text-info">9-12-2013</i>
                       </li>
                       <li>
-                        <span class="label label-success">feature</span>
+                        <span class="label label-important">fix</span>
                         For not selectable newly created groups in group selector widget in dashboard.
                         <i class="text-info">6-12-2013</i>
                       </li>
