--- a/war/version.html
+++ b/war/version.html
@@ -41,7 +41,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.9</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.10</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -55,6 +55,20 @@
               <div class="span12">
 
                 <ul>
+
+                  <li>
+                    <p>
+                    <h4>2.3.10</h4>
+                    </p>
+                    <hr/>
+                    <ul>
+                      <li>
+                        <!--<span class="label label-info">release</span>-->
+                        <!--Planned version release.-->
+                        <!--<i class="text-info">9-12-2013</i>-->
+                      </li>
+                    </ul>
+                  </li>
 
                   <li>
                     <p>
