updated version document

--- a/war/version.html
+++ b/war/version.html
@@ -63,9 +63,9 @@
                     <hr/>
                     <ul>
                       <li>
-                        <!--<span class="label label-info">release</span>-->
-                        <!--Planned version release.-->
-                        <!--<i class="text-info">9-12-2013</i>-->
+                        <span class="label important">fix</span>
+                        Fix for not displaying agenda on the last week of the year.
+                        <i class="text-info">27-12-2013</i>
                       </li>
                     </ul>
                   </li>
