updated version document

--- a/war/version.html
+++ b/war/version.html
@@ -64,8 +64,8 @@
                     <ul>
                       <li>
                         <span class="label important">fix</span>
-                        Fix for not displaying agenda on the last week of the year.
-                        <i class="text-info">27-12-2013</i>
+                        Fix for the function of the forward and back button in the timeline navigation bar. 
+                        <i class="text-info">2-1-2014</i>
                       </li>
                     </ul>
                   </li>
