--- a/war/index.html
+++ b/war/index.html
@@ -36,7 +36,7 @@
     <script src="dist/plugins.min.js"></script>
 
     <!-- profile configs -->
-    <script src="profiles/isparaat/profile.js"></script>
+    <script src="profiles/standby/profile.js"></script>
 
     <!--[if IE]>      <link rel="stylesheet" href="css/ie.css">                                  <![endif]-->
     <!--[if IE 8]>    <link rel="stylesheet" href="css/ie8.css">                                 <![endif]-->
@@ -364,7 +364,12 @@
 
     
     <script type="text/javascript">
-      if (window.profile.analytics.status) window.profile.analytics.code();
+      // if (window.profile.analytics.status) window.profile.analytics.code();
+
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
       if (location.host.split(':')[0] == 'localhost')
         document.write(
