latest tracing code with title tracking

--- a/war/index.html
+++ b/war/index.html
@@ -371,6 +371,9 @@
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+      ga('create', 'UA-44867560-2');
+      ga('send', 'pageview');
+
       if (location.host.split(':')[0] == 'localhost')
         document.write(
             '<script src="http://' + 
