division & capcodes call with some changes in profiles

--- a/war/version.html
+++ b/war/version.html
@@ -58,13 +58,27 @@
 
                   <li>
                     <p>
+                    <h4>2.3.11</h4>
+                    </p>
+                    <hr/>
+                    <ul>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Implementation for dynamic divisions and capcodes
+                        <i class="text-info">11-4-2014</i>
+                      </li>
+                    </ul>
+                  </li>
+
+                  <li>
+                    <p>
                     <h4>2.3.10</h4>
                     </p>
                     <hr/>
                     <ul>
                       <li>
-                        <span class="label important">fix</span>
-                        Fix for the function of the forward and back button in the timeline navigation bar. 
+                        <span class="label label-important">fix</span>
+                        Fix for the function of the forward and back button in the timeline navigation bar.
                         <i class="text-info">2-1-2014</i>
                       </li>
                     </ul>
