--- a/war/index.html
+++ b/war/index.html
@@ -36,7 +36,7 @@
     <script src="dist/plugins.min.js"></script>
 
     <!-- profile configs -->
-    <script src="profiles/knrm/profile.js"></script>
+    <script src="profiles/standby/profile.js"></script>
 
     <!--[if IE]>      <link rel="stylesheet" href="css/ie.css">                                  <![endif]-->
     <!--[if IE 8]>    <link rel="stylesheet" href="css/ie8.css">                                 <![endif]-->
@@ -311,14 +311,14 @@
               </li>
               <!--end StandBy Firedep-->
 
-              <li ng-show="config.profile.mobileApp.status"
-                  ng-hide="(config.profile.meta == 'standby') || (config.profile.meta == 'monster') || (config.profile.meta == 'knrm')">
-                <button class="btn btn-success btn-large"
-                        type="button"
-                        ng-click="downloadMobileApp('regular')">
-                  Download Mobiele App
-                </button>
-              </li>
+              <!--<li ng-show="config.profile.mobileApp.status"-->
+                  <!--ng-hide="(config.profile.meta == 'standby') || (config.profile.meta == 'monster') || (config.profile.meta == 'knrm')">-->
+                <!--<button class="btn btn-success btn-large"-->
+                        <!--type="button"-->
+                        <!--ng-click="downloadMobileApp('regular')">-->
+                  <!--Download Mobiele App-->
+                <!--</button>-->
+              <!--</li>-->
 
               <!--<li ng-show="config.profile.mobileApp.experimental">-->
               <!--<button class="btn btn-success btn-large"-->
