--- a/war/version.html
+++ b/war/version.html
@@ -61,6 +61,18 @@
                     <h4>2.3.12</h4>
                     </p>
                     <hr/>
+                    <ul>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        States are dynamically fetched from server based on the profile.
+                        <i class="text-info">15-4-2014</i>
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Some minor issue fixes.
+                        <i class="text-info">15-4-2014</i>
+                      </li>
+                    </ul>
                   </li>
 
                   <li>
@@ -71,7 +83,7 @@
                     <ul>
                       <li>
                         <span class="label label-success">feature</span>
-                        Implementation for dynamic divisions and capcodes
+                        Implementation for dynamic divisions and capcodes.
                         <i class="text-info">11-4-2014</i>
                       </li>
                     </ul>
