--- a/war/version.html
+++ b/war/version.html
@@ -41,7 +41,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.12</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.13</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -56,12 +56,19 @@
 
                 <ul>
 
-                  <!--<li>-->
-                    <!--<p>-->
-                    <!--<h4>2.3.13</h4>-->
-                    <!--</p>-->
-                    <!--<hr/>-->
-                  <!--</li>-->
+                  <li>
+                    <p>
+                    <h4>2.3.13</h4>
+                    </p>
+                    <hr/>
+                    <ul>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Date picker bug. (Day button)
+                        <i class="text-info">1-5-2014</i>
+                      </li>
+                    </ul>
+                  </li>
 
                   <li>
                     <p>
