domain dimension tracking for google analytics

--- a/war/version.html
+++ b/war/version.html
@@ -61,6 +61,13 @@
                     <h4>2.3.15</h4>
                     </p>
                     <hr/>
+                    <ul>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Domain dimension for Google Analytics tracking
+                        <i class="text-info">7-5-2014</i>
+                      </li>
+                    </ul>
                   </li>
 
                   <li>
