--- a/war/index.html
+++ b/war/index.html
@@ -36,7 +36,7 @@
     <script src="dist/plugins.min.js"></script>
 
     <!-- profile configs -->
-    <script src="profiles/standby/profile.js"></script>
+    <script src="profiles/demo/profile.js"></script>
 
     <!--[if IE]>      <link rel="stylesheet" href="css/ie.css">                                  <![endif]-->
     <!--[if IE 8]>    <link rel="stylesheet" href="css/ie8.css">                                 <![endif]-->
@@ -293,7 +293,17 @@
               </li>
               <!--end Monster-->
 
-              <!--StandBy Firedep-->
+              <!--Demo-->
+              <li
+                ng-show="config.profile.mobileApp.status && (config.profile.meta == 'demo')">
+                <a class="btn btn-success btn-large"
+                   href="https://play.google.com/store/apps/details?id=com.askcs.standbydemo">
+                  Download Android App
+                </a>
+              </li>
+              <!--end Demo-->
+
+              <!--Others-->
               <li
                 ng-show="config.profile.mobileApp.status && ((config.profile.meta == 'standby') || (config.profile.meta == 'knrm'))">
                 <a class="btn btn-success btn-large"
@@ -309,7 +319,7 @@
                   Download iPhone App
                 </a>
               </li>
-              <!--end StandBy Firedep-->
+              <!--end Others-->
 
               <!--<li ng-show="config.profile.mobileApp.status"-->
                   <!--ng-hide="(config.profile.meta == 'standby') || (config.profile.meta == 'monster') || (config.profile.meta == 'knrm')">-->
