extended role definitions & updated versions and some other developments

--- a/war/version.html
+++ b/war/version.html
@@ -41,7 +41,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.15</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.16</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -55,20 +55,59 @@
               <div class="span12">
 
                 <ul>
-
-                  <!--<li>-->
-                    <!--<p>-->
-                    <!--<h4>2.3.16</h4>-->
-                    <!--</p>-->
-                    <!--<hr/>-->
-                    <!--<ul>-->
-                      <!--<li>-->
-                        <!--<span class="label label-success">feature</span>-->
-                        <!--Domain dimension for Google Analytics tracking-->
-                        <!--<i class="text-info">7-5-2014</i>-->
-                      <!--</li>-->
-                    <!--</ul>-->
-                  <!--</li>-->
+                  <li>
+                    <p>
+                    <h4>2.3.16</h4>
+                    </p>
+                    <hr/>
+                    <ul>
+                      <li>
+                        <span class="label label-info">release</span>
+                        Version release.
+                        <i class="text-info">19-5-2014</i>
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Added new profile for 'demo' installation
+                        <i class="text-info">19-5-2014</i>
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        All timer related integer values are taken into profiles
+                        <i class="text-info">19-5-2014</i>
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Scheduled messaging temporarily disabled
+                        <i class="text-info">16-5-2014</i>
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Fix for TV-refreshing bug
+                        <i class="text-info">16-5-2014</i>
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        New Dashboard widget for one-snap-overview for everyone or group-member's availabilities
+                        <i class="text-info">16-5-2014</i>
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Planboard custom time-line line indicator & Google authorization disabled
+                        <i class="text-info">15-5-2014</i>
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Firefox login fix: Disable auto-complete for fields in the login form
+                        <i class="text-info">12-5-2014</i>
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        More friendly error message for (Fix for Standby Agenda tab bug: Planning for others)
+                        <i class="text-info">8-5-2014</i>
+                      </li>
+                    </ul>
+                  </li>
 
                   <li>
                     <p>
@@ -76,6 +115,11 @@
                     </p>
                     <hr/>
                     <ul>
+                      <li>
+                        <span class="label label-info">release</span>
+                        Version release.
+                        <i class="text-info">7-5-2014</i>
+                      </li>
                       <li>
                         <span class="label label-success">feature</span>
                         Domain dimension for Google Analytics tracking
@@ -91,6 +135,11 @@
                     <hr/>
                     <ul>
                       <li>
+                        <span class="label label-info">release</span>
+                        Version release.
+                        <i class="text-info">7-5-2014</i>
+                      </li>
+                      <li>
                         <span class="label label-important">fix</span>
                         Fix for Standby Agenda tab bug: Planning for others
                         <i class="text-info">7-5-2014</i>
@@ -105,6 +154,11 @@
                     <hr/>
                     <ul>
                       <li>
+                        <span class="label label-info">release</span>
+                        Version release.
+                        <i class="text-info">1-5-2014</i>
+                      </li>
+                      <li>
                         <span class="label label-important">fix</span>
                         Date picker bug. (Day button)
                         <i class="text-info">1-5-2014</i>
@@ -118,6 +172,11 @@
                     </p>
                     <hr/>
                     <ul>
+                      <li>
+                        <span class="label label-info">release</span>
+                        Version release.
+                        <i class="text-info">15-4-2014</i>
+                      </li>
                       <li>
                         <span class="label label-success">feature</span>
                         States are dynamically fetched from server based on the profile.
@@ -138,8 +197,13 @@
                     <hr/>
                     <ul>
                       <li>
+                        <span class="label label-info">release</span>
+                        Version release.
+                        <i class="text-info">11-4-2014</i>
+                      </li>
+                      <li>
                         <span class="label label-success">feature</span>
-                        Implementation for dynamic divisions and capcodes.
+                        Implementation for dynamic divisions and cap-codes.
                         <i class="text-info">11-4-2014</i>
                       </li>
                     </ul>
@@ -151,6 +215,11 @@
                     </p>
                     <hr/>
                     <ul>
+                      <li>
+                        <span class="label label-info">release</span>
+                        Version release.
+                        <i class="text-info">2-1-2014</i>
+                      </li>
                       <li>
                         <span class="label label-important">fix</span>
                         Fix for the function of the forward and back button in the timeline navigation bar.
@@ -436,7 +505,11 @@
                         Applying alphabetical sorting on receivers list when composing a message
                         <i class="text-info">8-7-2013</i>
                       </li>
-                      <li>Internationalization updates with a focus on the Dutch language <i class="text-info">8-7-2013</i></li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Internationalization updates with a focus on the Dutch language
+                        <i class="text-info">8-7-2013</i>
+                      </li>
                       <li>
                         <span class="label label-success">feature</span>
                         Major performance improvement when adding, modifying or deleting
@@ -476,7 +549,7 @@
                       </li>
                       <li>
                         <span class="label label-success">feature</span>
-                        Performance issues: Grouped calls for member timelines (#25)
+                        Performance issues: Grouped calls for member time-lines (#25)
                         <i class="text-info">28-6-2013</i>
                       </li>
                       <li>
@@ -516,7 +589,7 @@
                       </li>
                       <li>
                         <span class="label label-success">feature</span>
-                        Set standard agenda view to today +6days (#30)
+                        Set standard agenda view to today +6 days (#30)
                         <i class="text-info">1-7-2013</i>
                       </li>
                     </ul>
@@ -535,7 +608,7 @@
                       </li>
                       <li>
                         <span class="label label-success">feature</span>
-                        Always change a timeslot through slot form in planboard
+                        Always change a time-slot through slot form in planboard
                         <i class="text-info">27-6-2013</i>
                       </li>
                       <li>
@@ -609,7 +682,7 @@
                       </li>
                       <li>
                         <span class="label label-important">fix</span>
-                        Hotfix for not going further than 6th page in pagination in messages
+                        Hot fix for not going further than 6th page in pagination in messages
                         <i class="text-info">4-5-2013</i>
                       </li>
                     </ul>
@@ -667,8 +740,7 @@
                       </li>
                       <li>
                         <span class="label label-important">fix</span>
-                        Hot fix for not displaying correct weeks by
-                        previous/future weeks in profile timeline
+                        Hot fix for not displaying correct weeks by previous/future weeks in profile timeline
                         <i class="text-info">19-4-2013</i>
                       </li>
                     </ul>
@@ -719,7 +791,7 @@
                       </li>
                       <li>
                         <span class="label label-success">feature</span>
-                        Major app loading performance tweaks with reducing requests and minified
+                        Major app loading performance tweaks with reducing requests and minimized
                         and compiled to one version of app libraries
                         <i class="text-info">13-4-2013</i>
                       </li>
@@ -746,7 +818,7 @@
                       </li>
                       <li>
                         <span class="label label-important">fix</span>
-                        Removed footer for mobile and tablets and changed it to portable preloader
+                        Removed footer for mobile and tablets and changed it to portable pre-loader
                         <i class="text-info">10-4-2013</i>
                       </li>
                       <li>
@@ -800,7 +872,7 @@
                       </li>
                       <li>
                         <span class="label label-important">fix</span>
-                        Quick css fix for IE. (Not showing timeslots)
+                        Quick css fix for IE. (Not showing time-slots)
                         <i class="text-info">3-4-2013</i>
                       </li>
                       <li>
