--- a/war/version.html
+++ b/war/version.html
@@ -41,7 +41,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.16</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.17</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -56,14 +56,24 @@
 
                 <ul>
 
-                  <!--<li>-->
-                    <!--<p>-->
-                    <!--<h4>2.3.17</h4>-->
-                    <!--</p>-->
-                    <!--<hr/>-->
-                    <!--<ul>-->
-                    <!--</ul>-->
-                  <!--</li>-->
+                  <li>
+                    <p>
+                    <h4>2.3.17</h4>
+                    </p>
+                    <hr/>
+                    <ul>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        'No subject' placeholder in case of no subjects for the messages.
+                        <i class="text-info">3-6-2014</i>
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Correctly displaying cap-codes with leading zeros.
+                        <i class="text-info">29-5-2014</i>
+                      </li>
+                    </ul>
+                  </li>
 
                   <li>
                     <p>
