--- a/war/version.html
+++ b/war/version.html
@@ -63,6 +63,11 @@
                     <hr/>
                     <ul>
                       <li>
+                        <span class="label label-success">feature</span>
+                        User deleting functionality.
+                        <i class="text-info">5-6-2014</i>
+                      </li>
+                      <li>
                         <span class="label label-important">fix</span>
                         'No subject' placeholder in case of no subjects for the messages.
                         <i class="text-info">3-6-2014</i>
