angular upgraded to 1.2.17

--- a/war/index.html
+++ b/war/index.html
@@ -104,7 +104,7 @@
               </li>
 
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <a href="" class="dropdown-toggle" data-toggle="dropdown">
                 <i class="icon-user icon-white"></i> {{app.resources.name}} <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li>
@@ -366,8 +366,9 @@
     <!--[if gt IE 7]><!-->
     <script src="libs/chaps/timeline/2.4.0/timeline_modified.js"></script>
     <!--<script src="libs/chaps/timeline/2.5.1/timeline.js"></script>-->
-    <script src="libs/angular/1.0.5/angular.min.js"></script>
-    <script src="libs/angular/1.0.5/angular-resource.min.js"></script>
+    <script src="libs/angular/1.2.17/angular/angular.min.js"></script>
+    <script src="libs/angular/1.2.17/angular-resource/angular-resource.min.js"></script>
+    <script src="libs/angular/1.2.17/angular-route/angular-route.min.js"></script>
     <script src="libs/bootstrap/bootstrap.min.js"></script>
     
     <!--<script src="dist/app.min.js"></script>-->
