interceptor service installed

--- a/war/index.html
+++ b/war/index.html
@@ -366,7 +366,7 @@
     <!--[if gt IE 7]><!-->
     <script src="libs/chaps/timeline/2.4.0/timeline_modified.js"></script>
     <!--<script src="libs/chaps/timeline/2.5.1/timeline.js"></script>-->
-    <script src="libs/angular/1.2.17/angular/angular.min.js"></script>
+    <script src="libs/angular/1.2.17/angular/angular.js"></script>
     <script src="libs/angular/1.2.17/angular-resource/angular-resource.min.js"></script>
     <script src="libs/angular/1.2.17/angular-route/angular-route.min.js"></script>
     <script src="libs/bootstrap/bootstrap.min.js"></script>
