--- a/war/version.html
+++ b/war/version.html
@@ -64,8 +64,23 @@
                     <ul>
                       <li>
                         <span class="label label-success">feature</span>
+                        Auto logout when session expires
+                        <i class="text-info">11-6-2014</i>
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
                         User deleting functionality.
                         <i class="text-info">5-6-2014</i>
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Issue with not showing receiver or recipient name helped out.
+                        <i class="text-info">4-6-2014</i>
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Refresh inbox messages after sending a message and closing the message view.
+                        <i class="text-info">4-6-2014</i>
                       </li>
                       <li>
                         <span class="label label-important">fix</span>
