faq view added with videos

--- a/war/index.html
+++ b/war/index.html
@@ -100,7 +100,15 @@
             <ul class="nav pull-right" ng-hide="browser.mobile">
 
               <li>
-                <a href="#help#{{location}}"><i class="icon-question-sign icon-white"></i> Hulp & Ondersteuning</a>
+                <a href="#faq#web">
+                  <i class="icon-question-sign icon-white"></i> FAQ
+                </a>
+              </li>
+
+              <li>
+                <a href="#help#{{location}}">
+                  <i class="icon-info-sign icon-white"></i> Handleiding
+                </a>
               </li>
 
               <li class="dropdown">
