--- a/war/version.html
+++ b/war/version.html
@@ -41,7 +41,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.17</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.18</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -55,6 +55,55 @@
               <div class="span12">
 
                 <ul>
+
+                  <li>
+                    <p>
+                    <h4>2.3.18</h4>
+                    </p>
+                    <hr/>
+                    <ul>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Added FAQ section with linked tutorial videos.
+                        <i class="text-info">20-6-2014</i>
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Solved issue with not creating planning for recursive timeline in past.
+                        <i class="text-info">19-6-2014</i>
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Improved user credetentials validation by registration.
+                        <i class="text-info">19-6-2014</i>
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Improved email validation.
+                        <i class="text-info">19-6-2014</i>
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Issue with not closing planning for in profile timeline section.
+                        <i class="text-info">18-6-2014</i>
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Phone number validation.
+                        <i class="text-info">18-6-2014</i>
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Enabling logging in for redirected users coming from portal.
+                        <i class="text-info">18-6-2014</i>
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        User profile enhancements and fixes
+                        <i class="text-info">17-6-2014</i>
+                      </li>
+                    </ul>
+                  </li>
 
                   <li>
                     <p>
