--- a/war/version.html
+++ b/war/version.html
@@ -63,6 +63,11 @@
                     <hr/>
                     <ul>
                       <li>
+                        <span class="label label-info">release</span>
+                        Version release.
+                        <i class="text-info">20-6-2014</i>
+                      </li>
+                      <li>
                         <span class="label label-success">feature</span>
                         Added FAQ section with linked tutorial videos.
                         <i class="text-info">20-6-2014</i>
@@ -111,6 +116,11 @@
                     </p>
                     <hr/>
                     <ul>
+                      <li>
+                        <span class="label label-info">release</span>
+                        Version release.
+                        <i class="text-info">13-6-2014</i>
+                      </li>
                       <li>
                         <span class="label label-success">feature</span>
                         Auto logout when session expires
