new functionality of showing a multiselect box for profile edit form & some other cleanups

--- a/war/index.html
+++ b/war/index.html
@@ -379,8 +379,8 @@
     <script src="libs/angular/1.2.17/angular-route/angular-route.min.js"></script>
     <script src="libs/bootstrap/bootstrap.min.js"></script>
     
-    <!--<script src="dist/app.min.js"></script>-->
-    <script src="src/app.js"></script>
+    <script src="dist/app.min.js"></script>
+    <!--<script src="src/app.js"></script>-->
     <!--<![endif]-->
 
     
