--- a/war/version.html
+++ b/war/version.html
@@ -41,7 +41,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.18</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.19</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -56,6 +56,61 @@
               <div class="span12">
 
                 <ul>
+
+                  <li>
+                    <p>
+                    <h4>2.3.19</h4>
+                    <i class="text-info pull-right">26-6-2014</i>
+                    </p>
+                    <hr/>
+                    <ul>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Response of send direct message is more compatible with multiple types of returns.
+                        <!--<i class="text-info">26-6-2014</i>-->
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Solved an issue with password reset.
+                        <!--<i class="text-info">26-6-2014</i>-->
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Solved inconsistency problems with names. More usage of first name and last names.
+                        <!--<i class="text-info">25-6-2014</i>-->
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Communicate only e164 formatted phone numbers to backend.
+                        <!--<i class="text-info">25-6-2014</i>-->
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Groups editing for profile edit view.
+                        <!--<i class="text-info">25-6-2014</i>-->
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        User interface improvements for footer bar and download buttons and brandt identity of web app.
+                        <!--<i class="text-info">25-6-2014</i>-->
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Fixed a bug on delete user modal password matching.
+                        <!--<i class="text-info">22-6-2014</i>-->
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Fixed an issue with deleting a group.
+                        <!--<i class="text-info">22-6-2014</i>-->
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Prevention matrix implementation for any past related timeline mutations
+                        <!--<i class="text-info">22-6-2014</i>-->
+                      </li>
+                    </ul>
+                  </li>
 
                   <li>
                     <p>
