--- a/war/index.html
+++ b/war/index.html
@@ -36,7 +36,7 @@
     <script src="dist/plugins.min.js"></script>
 
     <!-- profile configs -->
-    <script src="profiles/monster/profile.js"></script>
+    <script src="profiles/standby/profile.js"></script>
 
     <!--[if IE]>      <link rel="stylesheet" href="css/ie.css">                                  <![endif]-->
     <!--[if IE 8]>    <link rel="stylesheet" href="css/ie8.css">                                 <![endif]-->
@@ -379,8 +379,8 @@
     <script src="libs/angular/1.2.17/angular-route/angular-route.min.js"></script>
     <script src="libs/bootstrap/bootstrap.min.js"></script>
     
-    <!--<script src="dist/app.min.js"></script>-->
-    <script src="src/app.js"></script>
+    <script src="dist/app.min.js"></script>
+    <!--<script src="src/app.js"></script>-->
     <!--<![endif]-->
 
     
